# racode-reviewer

./: .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_DOCS.md  pyproject.toml
app/: auth.py  code_parser.py  diff_parser.py  embedding_generator.py  github_client.py  incremental_indexer.py  indexer.py  llm_inference.py  logging_config.py  main.py  prompts.py  query_engine.py  rag_retriever.py  repo_manager.py  utils.py  vector_store.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  github.py  health.py
app/common/: webhook_utils.py
app/core/: config.py  exceptions.py  logging_config.py
app/github/: __init__.py  auth.py  client.py  webhook_utils.py
app/indexing/: __init__.py  code_parser.py  embedding_generator.py  incremental_indexer.py  indexer.py
app/llm/: __init__.py  prompts.py  rag_retriever.py
app/services/: github_service.py  llm_service.py
app/storage/: __init__.py  repo_manager.py  vector_store.py
app/utils/: diff_parser.py  general_utils.py
