[project]
name = "code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "chromadb>=1.0.13",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-ollama>=0.1.1",
    "langgraph>=0.4.8",
    "fastapi==0.111.1",
    "pydantic==2.8.2",
    "typing-extensions>=4.12.0",
    "pydantic-core>=2.18.2",
    "starlette>=0.37.2",
    "uvicorn>=0.22.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
    "lancedb>=0.6.0",
    "GitPython>=3.1.0",
    "tree-sitter==0.20.4",
    "tree-sitter-python>=0.20.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.1.0",
    "tree-sitter-languages",
    "cryptography>=45.0.4",
]
